[package]
name = "cube2rust"
description = "A tool for generating a rust project from a STM32CubeMX ioc file"
version = "0.0.1"
edition = "2018"
authors = ["Dimitri Polonski"]
repository = "https://github.com/dimpolo/cube2rust/"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
    "config"
]
keywords = [
    "embedded",
    "generator",
    "cube",
    "stm32",
    "hal",
]


[dependencies]
regex = "1.3.7"
fstrings = "0.2.3"
anyhow = "1.0.31"
human-sort = "0.2.2"
phf = { version = "0.8.0", features = ["macros"] }
